# Diplomatic

./: README.md  predict.py  training.py
HPC_model/: CMakeLists.txt
HPC_model/inc/: objectness.h  predict_api.h
HPC_model/predic_api_py/: prediction.py
HPC_model/source/: main.cpp  objectness.cpp  objectness.h  ui_main_window.cpp  ui_main_window.h  ui_resultimage_area.cpp  ui_resultimage_area.h
UI_Prediction/: CMakeLists.txt  main.cpp  ui_main_window.cpp  ui_main_window.h
report/: Doan.tex
train_test_data/: testing.py  training.py
